// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing UserTable on click add 1`] = `
<div
  className=""
>
  <div
    className="MuiGrid-item-10 GridItem-grid-106"
  >
    <div
      className="Card-card-107"
    >
      <div
        className="CardHeader-cardHeader-111 CardHeader-primaryCardHeader-119"
      >
        <div
          className="MuiGrid-container-9 MuiGrid-align-items-xs-center-17 MuiGrid-justify-xs-space-between-28"
        >
          <div
            className="MuiGrid-item-10 GridItem-grid-106"
          >
            <h4
              className="UserTable-cardTitleWhite-2"
            >
              Users
            </h4>
          </div>
          <div
            className="MuiGrid-item-10 GridItem-grid-106"
          >
            <div
              className="MuiGrid-container-9"
            >
              <div
                className="MuiGrid-item-10 GridItem-grid-106"
              >
                Array [
                  <button
                    aria-describedby={null}
                    aria-label="Add"
                    className="MuiButtonBase-root-158 MuiButton-root-132 MuiButton-fab-149 MuiButton-mini-154 MuiButton-contained-143 MuiButton-containedSecondary-145 MuiButton-raised-146 MuiButton-raisedSecondary-148"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[MockFunction]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    title="Add"
                    type="button"
                  >
                    <span
                      className="MuiButton-label-133"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root-161"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root-170"
                    />
                  </button>,
                  "",
                ]
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="CardBody-cardBody-121"
      >
        <div
          className="ReactTable"
          style={Object {}}
        >
          <div
            className="rt-table"
            role="grid"
          >
            <div
              className="rt-thead -header"
              style={
                Object {
                  "minWidth": "35px",
                }
              }
            >
              <div
                className="rt-tr"
                role="row"
              >
                <div
                  className="rt-th"
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "flex": "35 0 auto",
                      "maxWidth": "35px",
                      "width": "35px",
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className=""
                  />
                </div>
              </div>
            </div>
            <div
              className="rt-tbody"
              style={
                Object {
                  "minWidth": "35px",
                }
              }
            >
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="pagination-bottom"
          >
            <div
              className="-pagination"
            >
              <div
                className="-previous"
              >
                <button
                  className="-btn"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Previous
                </button>
              </div>
              <div
                className="-center"
              >
                <span
                  className="-pageInfo"
                >
                  Page
                   
                  <div
                    className="-pageJump"
                  >
                    <input
                      aria-label="jump to page"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      type="number"
                      value={1}
                    />
                  </div>
                   
                  of
                   
                  <span
                    className="-totalPages"
                  >
                    1
                  </span>
                </span>
                <span
                  className="select-wrap -pageSizeOptions"
                >
                  <select
                    aria-label="rows per page"
                    onChange={[Function]}
                    value={10}
                  >
                    <option
                      key="0"
                      value={5}
                    >
                      5 rows
                    </option>
                    <option
                      key="1"
                      value={10}
                    >
                      10 rows
                    </option>
                    <option
                      key="2"
                      value={20}
                    >
                      20 rows
                    </option>
                    <option
                      key="3"
                      value={25}
                    >
                      25 rows
                    </option>
                    <option
                      key="4"
                      value={50}
                    >
                      50 rows
                    </option>
                    <option
                      key="5"
                      value={100}
                    >
                      100 rows
                    </option>
                  </select>
                </span>
              </div>
              <div
                className="-next"
              >
                <button
                  className="-btn"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Next
                </button>
              </div>
            </div>
          </div>
          <div
            className="rt-noData"
          >
            No rows found
          </div>
          <div
            className="-loading"
          >
            <div
              className="-loading-inner"
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing UserTable on click delete 1`] = `
<div
  className=""
>
  <div
    className="MuiGrid-item-10 GridItem-grid-106"
  >
    <div
      className="Card-card-107"
    >
      <div
        className="CardHeader-cardHeader-111 CardHeader-primaryCardHeader-119"
      >
        <div
          className="MuiGrid-container-9 MuiGrid-align-items-xs-center-17 MuiGrid-justify-xs-space-between-28"
        >
          <div
            className="MuiGrid-item-10 GridItem-grid-106"
          >
            <h4
              className="UserTable-cardTitleWhite-2"
            >
              Users
            </h4>
          </div>
          <div
            className="MuiGrid-item-10 GridItem-grid-106"
          >
            <div
              className="MuiGrid-container-9"
            >
              <div
                className="MuiGrid-item-10 GridItem-grid-106"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="CardBody-cardBody-121"
      >
        <div
          className="ReactTable"
          style={Object {}}
        >
          <div
            className="rt-table"
            role="grid"
          >
            <div
              className="rt-thead -header"
              style={
                Object {
                  "minWidth": "135px",
                }
              }
            >
              <div
                className="rt-tr"
                role="row"
              >
                <div
                  className="rt-th"
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "flex": "35 0 auto",
                      "maxWidth": "35px",
                      "width": "35px",
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className=""
                  />
                </div>
                <div
                  className="rt-th rt-resizable-header -cursor-pointer"
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className="rt-resizable-header-content"
                  >
                    Name
                  </div>
                  <div
                    className="rt-resizer"
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  />
                </div>
              </div>
            </div>
            <div
              className="rt-tbody"
              style={
                Object {
                  "minWidth": "135px",
                }
              }
            >
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -odd"
                  role="row"
                >
                  <div
                    className="rt-td rt-expandable"
                    onClick={[Function]}
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <div
                      className="rt-expander"
                    >
                      •
                    </div>
                  </div>
                  <div
                    className="rt-td"
                    onClick={[Function]}
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    tuan
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="pagination-bottom"
          >
            <div
              className="-pagination"
            >
              <div
                className="-previous"
              >
                <button
                  className="-btn"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Previous
                </button>
              </div>
              <div
                className="-center"
              >
                <span
                  className="-pageInfo"
                >
                  Page
                   
                  <div
                    className="-pageJump"
                  >
                    <input
                      aria-label="jump to page"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      type="number"
                      value={1}
                    />
                  </div>
                   
                  of
                   
                  <span
                    className="-totalPages"
                  >
                    1
                  </span>
                </span>
                <span
                  className="select-wrap -pageSizeOptions"
                >
                  <select
                    aria-label="rows per page"
                    onChange={[Function]}
                    value={10}
                  >
                    <option
                      key="0"
                      value={5}
                    >
                      5 rows
                    </option>
                    <option
                      key="1"
                      value={10}
                    >
                      10 rows
                    </option>
                    <option
                      key="2"
                      value={20}
                    >
                      20 rows
                    </option>
                    <option
                      key="3"
                      value={25}
                    >
                      25 rows
                    </option>
                    <option
                      key="4"
                      value={50}
                    >
                      50 rows
                    </option>
                    <option
                      key="5"
                      value={100}
                    >
                      100 rows
                    </option>
                  </select>
                </span>
              </div>
              <div
                className="-next"
              >
                <button
                  className="-btn"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Next
                </button>
              </div>
            </div>
          </div>
          <div
            className="-loading"
          >
            <div
              className="-loading-inner"
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing UserTable on click edit 1`] = `
<div
  className=""
>
  <div
    className="MuiGrid-item-10 GridItem-grid-106"
  >
    <div
      className="Card-card-107"
    >
      <div
        className="CardHeader-cardHeader-111 CardHeader-primaryCardHeader-119"
      >
        <div
          className="MuiGrid-container-9 MuiGrid-align-items-xs-center-17 MuiGrid-justify-xs-space-between-28"
        >
          <div
            className="MuiGrid-item-10 GridItem-grid-106"
          >
            <h4
              className="UserTable-cardTitleWhite-2"
            >
              Users
            </h4>
          </div>
          <div
            className="MuiGrid-item-10 GridItem-grid-106"
          >
            <div
              className="MuiGrid-container-9"
            >
              <div
                className="MuiGrid-item-10 GridItem-grid-106"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="CardBody-cardBody-121"
      >
        <div
          className="ReactTable"
          style={Object {}}
        >
          <div
            className="rt-table"
            role="grid"
          >
            <div
              className="rt-thead -header"
              style={
                Object {
                  "minWidth": "135px",
                }
              }
            >
              <div
                className="rt-tr"
                role="row"
              >
                <div
                  className="rt-th"
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "flex": "35 0 auto",
                      "maxWidth": "35px",
                      "width": "35px",
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className=""
                  />
                </div>
                <div
                  className="rt-th rt-resizable-header -cursor-pointer"
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "flex": "100 0 auto",
                      "maxWidth": null,
                      "width": "100px",
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className="rt-resizable-header-content"
                  >
                    Name
                  </div>
                  <div
                    className="rt-resizer"
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  />
                </div>
              </div>
            </div>
            <div
              className="rt-tbody"
              style={
                Object {
                  "minWidth": "135px",
                }
              }
            >
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -odd"
                  role="row"
                >
                  <div
                    className="rt-td rt-expandable"
                    onClick={[Function]}
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <div
                      className="rt-expander"
                    >
                      •
                    </div>
                  </div>
                  <div
                    className="rt-td"
                    onClick={[Function]}
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    tuan
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="pagination-bottom"
          >
            <div
              className="-pagination"
            >
              <div
                className="-previous"
              >
                <button
                  className="-btn"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Previous
                </button>
              </div>
              <div
                className="-center"
              >
                <span
                  className="-pageInfo"
                >
                  Page
                   
                  <div
                    className="-pageJump"
                  >
                    <input
                      aria-label="jump to page"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      type="number"
                      value={1}
                    />
                  </div>
                   
                  of
                   
                  <span
                    className="-totalPages"
                  >
                    1
                  </span>
                </span>
                <span
                  className="select-wrap -pageSizeOptions"
                >
                  <select
                    aria-label="rows per page"
                    onChange={[Function]}
                    value={10}
                  >
                    <option
                      key="0"
                      value={5}
                    >
                      5 rows
                    </option>
                    <option
                      key="1"
                      value={10}
                    >
                      10 rows
                    </option>
                    <option
                      key="2"
                      value={20}
                    >
                      20 rows
                    </option>
                    <option
                      key="3"
                      value={25}
                    >
                      25 rows
                    </option>
                    <option
                      key="4"
                      value={50}
                    >
                      50 rows
                    </option>
                    <option
                      key="5"
                      value={100}
                    >
                      100 rows
                    </option>
                  </select>
                </span>
              </div>
              <div
                className="-next"
              >
                <button
                  className="-btn"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Next
                </button>
              </div>
            </div>
          </div>
          <div
            className="-loading"
          >
            <div
              className="-loading-inner"
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing UserTable render component 1`] = `
<div
  className=""
>
  <div
    className="MuiGrid-item-10 GridItem-grid-106"
  >
    <div
      className="Card-card-107"
    >
      <div
        className="CardHeader-cardHeader-111 CardHeader-primaryCardHeader-119"
      >
        <div
          className="MuiGrid-container-9 MuiGrid-align-items-xs-center-17 MuiGrid-justify-xs-space-between-28"
        >
          <div
            className="MuiGrid-item-10 GridItem-grid-106"
          >
            <h4
              className="UserTable-cardTitleWhite-2"
            >
              Users
            </h4>
          </div>
          <div
            className="MuiGrid-item-10 GridItem-grid-106"
          >
            <div
              className="MuiGrid-container-9"
            >
              <div
                className="MuiGrid-item-10 GridItem-grid-106"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="CardBody-cardBody-121"
      >
        <div
          className="ReactTable"
          style={Object {}}
        >
          <div
            className="rt-table"
            role="grid"
          >
            <div
              className="rt-thead -header"
              style={
                Object {
                  "minWidth": "35px",
                }
              }
            >
              <div
                className="rt-tr"
                role="row"
              >
                <div
                  className="rt-th"
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "flex": "35 0 auto",
                      "maxWidth": "35px",
                      "width": "35px",
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className=""
                  />
                </div>
              </div>
            </div>
            <div
              className="rt-tbody"
              style={
                Object {
                  "minWidth": "35px",
                }
              }
            >
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -odd"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="rt-tr-group"
                role="rowgroup"
              >
                <div
                  className="rt-tr -padRow -even"
                  role="row"
                  style={Object {}}
                >
                  <div
                    className="rt-td"
                    role="gridcell"
                    style={
                      Object {
                        "flex": "35 0 auto",
                        "maxWidth": "35px",
                        "width": "35px",
                      }
                    }
                  >
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="pagination-bottom"
          >
            <div
              className="-pagination"
            >
              <div
                className="-previous"
              >
                <button
                  className="-btn"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Previous
                </button>
              </div>
              <div
                className="-center"
              >
                <span
                  className="-pageInfo"
                >
                  Page
                   
                  <div
                    className="-pageJump"
                  >
                    <input
                      aria-label="jump to page"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      type="number"
                      value={1}
                    />
                  </div>
                   
                  of
                   
                  <span
                    className="-totalPages"
                  >
                    1
                  </span>
                </span>
                <span
                  className="select-wrap -pageSizeOptions"
                >
                  <select
                    aria-label="rows per page"
                    onChange={[Function]}
                    value={10}
                  >
                    <option
                      key="0"
                      value={5}
                    >
                      5 rows
                    </option>
                    <option
                      key="1"
                      value={10}
                    >
                      10 rows
                    </option>
                    <option
                      key="2"
                      value={20}
                    >
                      20 rows
                    </option>
                    <option
                      key="3"
                      value={25}
                    >
                      25 rows
                    </option>
                    <option
                      key="4"
                      value={50}
                    >
                      50 rows
                    </option>
                    <option
                      key="5"
                      value={100}
                    >
                      100 rows
                    </option>
                  </select>
                </span>
              </div>
              <div
                className="-next"
              >
                <button
                  className="-btn"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Next
                </button>
              </div>
            </div>
          </div>
          <div
            className="rt-noData"
          >
            No rows found
          </div>
          <div
            className="-loading"
          >
            <div
              className="-loading-inner"
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
